--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1"
