refactor/Enhance environment configuration and security by adding rate limiting, CORS options, and necessary dependencies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,8 @@ DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-ID].supabas
 # Direct URL for Prisma (Direct Connection) - Optional
 DIRECT_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-ID].supabase.co:5432/postgres"
 
-
-# Example:
-# DATABASE_URL="postgresql://postgres:your-password@db.abcdefghijklmnop.supabase.co:6543/postgres?pgbouncer=true&connection_limit=1"
-# DIRECT_URL="postgresql://postgres:your-password@db.abcdefghijklmnop.supabase.co:5432/postgres"
+NODE_ENV=production
+PORT=3000
+RATE_LIMIT_WINDOW=900000 # 15 minutes
+RATE_LIMIT_MAX=100
+ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com:localhost:3001
