--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "compression": "^1.8.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^17.0.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1"
