--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,4 +10,4 @@ NODE_ENV=production
 PORT=3000
 RATE_LIMIT_WINDOW=900000 # 15 minutes
 RATE_LIMIT_MAX=100
-ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com:localhost:3001
+ALLOWED_ORIGINS="https://yourdomain.com,https://www.yourdomain.com:http://localhost:3001"
