--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "seeduser": "node prisma/userSeed.js",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,9 +21,11 @@
     "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "prisma": "^6.10.1"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.11.1"
   }
 }
