--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,4 @@ PORT=3000
 RATE_LIMIT_WINDOW=900000 # 15 minutes
 RATE_LIMIT_MAX=100
 ALLOWED_ORIGINS="https://yourdomain.com,https://www.yourdomain.com:http://localhost:3001"
+JWT_SECRET="JWT_SECRET"
