--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
     "cookie-parser": "~1.4.4",
@@ -22,7 +24,8 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
