--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,9 +6,18 @@ DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-ID].supabas
 # Direct URL for Prisma (Direct Connection) - Optional
 DIRECT_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-ID].supabase.co:5432/postgres"
 
-NODE_ENV=production
+NODE_ENV=development
+
 PORT=3000
+
 RATE_LIMIT_WINDOW=900000 # 15 minutes
+
 RATE_LIMIT_MAX=100
+
 ALLOWED_ORIGINS="https://yourdomain.com,https://www.yourdomain.com:http://localhost:3001"
+
 JWT_SECRET="JWT_SECRET"
+
+# Gemini AI Configuration
+GEMINI_API_KEY="Insert your API Key"
+
